# CROWNLYN

./: CMakeLists.txt  README.md  TestsMain.cpp  main.cpp  mainGame.cpp  mainGrafics.cpp
src/AI/: CaptureAI.cpp  CaptureAI.h  DefenseAI.cpp  DefenseAI.h  RandomAI.cpp  RandomAI.h
src/Arbol/: Arbol.cpp  Arbol.h  DecisionTreeEngine.cpp  DecisionTreeEngine.h  GameAnalyzer.cpp  GameAnalyzer.h  NodeEncoder.cpp  NodeEncoder.h  Nodo.cpp  Nodo.h  NuevaPartidaEngine.cpp  NuevaPartidaEngine.h  StateEvaluator.cpp  StateEvaluator.h  Tablero.cpp  Tablero.h
src/Assets/: Torre.png~
src/Fichas/: Alfil.cpp  Alfil.h  Caballo.cpp  Caballo.h  Dama.cpp  Dama.h  Ficha.cpp  Ficha.h  Peon.cpp  Peon.h  Rey.cpp  Rey.h  Torre.cpp  Torre.h
src/Game/: DrawFichaEngine.cpp  DrawFichaEngine.h  DrawGameEngine.cpp  DrawGameEngine.h  DrawTableroEngine.cpp  DrawTableroEngine.h  GameEngine.cpp  GameEngine.h  ImagenManager.cpp  ImagenManager.h  MoveExecutor.cpp  MoveExecutor.h  MoveGenerator.cpp  MoveGenerator.h  PlayFichaEngine.cpp  PlayFichaEngine.h  Posicion.h  TableroBuilder.cpp  TableroBuilder.h  TextureFichasLoader.cpp  TextureFichasLoader.h
src/Graphics/: Renderer.cpp  Renderer.h  Shader.cpp
src/Graphics/Shaders/: texture.frag  texture.vert
src/Screens/: DrawGameEngine.cpp  DrawGameEngine.h  DrawTableroEngine.cpp  DrawTableroEngine.h  HistoryEndingsScreen.cpp  HistoryEndingsScreen.h  HistoryMovesScreen.cpp  HistoryMovesScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  MatchScreen.cpp  MatchScreen.h  OneScreen.cpp  OneScreen.h  OneVsAIScreen.cpp  OneVsAIScreen.h  RewardsMainMenu.cpp  RewardsMainMenu.h  ScreenManager.cpp  ScreenManager.h  SpecialMovesScreen.cpp  SpecialMovesScreen.h
src/Test/: TestDecisionTreeEngine.cpp  TestDecisionTreeEngine.h  TestGameAnalyzer.cpp  TestGameAnalyzer.h  TestStates.cpp  TestStates.h  TestSuite.cpp  TestSuite.h
